--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
             cpus: "0.1"
             memory: '50M'
         placement: 
-            constraints: [node.role != manager]
+            constraints: [node.role == manager]
     labels:
       org.label-schema.group: "nt_service"
 
